syntax = "proto3";

package grpc;

option go_package = "github.com/DenisKnez/management/user/service/grpc";

service Todo {
    rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
}

message CreateTodoRequest {
    string text = 1;
}

message CreateTodoResponse {}

message UploadFileRequest {
    string fileName = 1;
    bytes fileData = 2;
}

message UploadFileResponse {}